// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correctly with icon 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with icon and leading 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with icon and trailing 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;

exports[`Button > renders correctly with label 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with leading and trailing icons 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    <span class="truncate" data-slot="label">Button</span>
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;

exports[`Button > renders correctly with leading icon 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant ghost 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-elevated aria-disabled:bg-transparent aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:bg-elevated hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-default text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant link 1`] = `
<div>
  <button aria-disabled="false" class="active:text-default aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:cursor-pointer hover:text-default inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-muted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant outline 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-elevated aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-default disabled:bg-default disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:bg-elevated hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-default text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant soft 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-accented/75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-elevated disabled:bg-elevated disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:bg-accented/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-default text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant solid 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-inverted/90 aria-disabled:bg-inverted aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-inverted disabled:bg-inverted disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:bg-inverted/90 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with neutral variant subtle 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-accented/75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-elevated disabled:bg-elevated disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-inverted focus-visible:outline-offset-2 gap-1.5 hover:bg-accented/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-default text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant ghost 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/10 aria-disabled:bg-transparent aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/10 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-primary text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant link 1`] = `
<div>
  <button aria-disabled="false" class="active:text-primary/75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:cursor-pointer hover:text-primary/75 inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-primary text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant outline 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/10 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/10 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 ring ring-inset ring-primary/50 rounded-md text-primary text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant soft 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/15 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary/10 disabled:bg-primary/10 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/15 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-primary text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant solid 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with primary variant subtle 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/15 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary/10 disabled:bg-primary/10 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/15 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 ring ring-inset ring-primary/25 rounded-md text-primary text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with size lg 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-2 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-3 py-2 rounded-md text-base text-inverted transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with size md 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with size sm 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2 py-1 rounded-md text-inverted text-xs transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
  </button>
</div>
`;

exports[`Button > renders correctly with slots 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">Leading slotDefault slotTrailing slot</button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size lg 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-2 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center p-2 rounded-md text-base text-inverted transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-5" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size md 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center p-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;

exports[`Button > renders correctly with square icon-only and size sm 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center p-1 rounded-md text-inverted text-xs transition-colors" data-slot="base">
    <svg aria-hidden="true" class="shrink-0 size-3" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;

exports[`Button > renders correctly with trailing icon 1`] = `
<div>
  <button aria-disabled="false" class="active:bg-primary/75 aria-disabled:bg-primary aria-disabled:cursor-not-allowed aria-disabled:opacity-75 bg-primary disabled:bg-primary disabled:cursor-not-allowed disabled:opacity-75 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary gap-1.5 hover:bg-primary/75 hover:cursor-pointer inline-flex items-center justify-center px-2.5 py-1.5 rounded-md text-inverted text-sm transition-colors" data-slot="base">
    <span class="truncate" data-slot="label">Button</span>
    <svg aria-hidden="true" class="shrink-0 size-4" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
  </button>
</div>
`;
